Bug 1559167 - Updated logMessage to support logging of scriptErrors from parent to content process. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D42295